--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-bootstrap": "latest",
     "angular-animate": "~1.3.15",
     "angular-resource": "~1.3.15",
+    "angular-sanitize": "~1.3.15",
     "angular-toastr": "~1.4.1",
     "bootstrap": "~3.3.5",
     "ng-img-crop": "~0.3.1",
