--- a/app/bower.json
+++ b/app/bower.json
@@ -14,6 +14,7 @@
     "angular-toastr": "~1.4.1",
     "bootstrap": "~3.3.5",
     "ng-img-crop": "~0.3.1",
-    "toastr": "latest"
+    "toastr": "latest",
+    "angular-ui-select": "~0.12.0"
   }
 }
